# transcriber

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python.yml
src/: audio_processor.py  transcriber.py  utils.py
